lib/src/compiler/tests/testdata/errors/47.out
error[E005]: assignment mismatch
 --> line:4:13
  |
4 |     for all x,y in test_proto2.array_int64 : ( true )
  |             ^^^    ^^^^^^^^^^^^^^^^^^^^^^^ this produces 1 value(s)
  |             |
  |             this expects 2 value(s)